# vdsg

./: .gitignore  README.md  pyproject.toml
tests/: test_vdsg.py
vdsg/: Catalogue.F  __main__.py  vdsg.py
